crates/formatter/tests/snapshots/snapshots__migrations__000539_ai_provider_icons.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table ai_providers drop column icon;
