crates/formatter/tests/snapshots/snapshots__migrations__000539_ai_provider_icons.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table ai_providers add column icon text not null default '';
