crates/formatter/tests/snapshots/snapshots__migrations__000541_aibridge_interception_error.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table aibridge_interceptions drop column error_type,
drop column error_message;

drop type aibridge_interception_error_type;
