crates/formatter/tests/snapshots/snapshots__migrations__000542_chat_reasoning_effort.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view if exists chats_expanded;

-- The up migration left the legacy per-provider effort keys in
-- place, so removing the reasoning_effort key restores the previous
-- state exactly.
update chat_model_configs
set options = options - 'reasoning_effort'
where options ? 'reasoning_effort';

alter table chats drop column last_reasoning_effort;
alter table chat_messages drop column reasoning_effort;
alter table chat_queued_messages drop column reasoning_effort;
drop type chat_reasoning_effort;

create view chats_expanded as
select
	c.id,
	c.owner_id,
	c.workspace_id,
	c.title,
	c.status,
	c.worker_id,
	c.started_at,
	c.heartbeat_at,
	c.created_at,
	c.updated_at,
	c.parent_chat_id,
	c.root_chat_id,
	c.last_model_config_id,
	c.archived,
	c.last_error,
	c.mode,
	c.mcp_server_ids,
	c.labels,
	c.build_id,
	c.agent_id,
	c.pin_order,
	c.last_read_message_id,
	c.dynamic_tools,
	c.organization_id,
	c.plan_mode,
	c.client_type,
	c.last_turn_summary,
	c.snapshot_version,
	c.history_version,
	c.queue_version,
	c.generation_attempt,
	c.retry_state,
	c.retry_state_version,
	c.runner_id,
	c.requires_action_deadline_at,
	coalesce(root.user_acl, c.user_acl) as user_acl,
	coalesce(root.group_acl, c.group_acl) as group_acl,
	owner.username as owner_username,
	owner.name as owner_name,
	c.context_aggregate_hash,
	c.context_dirty_since,
	c.context_dirty_resources,
	c.context_error
from (
	(
		chats c
			left join chats root
				on ((root.id = coalesce(c.root_chat_id, c.parent_chat_id)))
	)
		join visible_users owner on ((owner.id = c.owner_id))
);
