crates/formatter/tests/snapshots/snapshots__migrations__000542_chat_reasoning_effort.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Per-turn reasoning effort. The chats_expanded view must be dropped
-- and recreated so the new chats column can appear in its column list.
drop view if exists chats_expanded;

create type chat_reasoning_effort as enum (
	'none',
	'minimal',
	'low',
	'medium',
	'high',
	'xhigh',
	'max'
);

alter table chats add column last_reasoning_effort chat_reasoning_effort;
alter table chat_messages add column reasoning_effort chat_reasoning_effort;
alter table chat_queued_messages add column reasoning_effort chat_reasoning_effort;

comment on column chats.last_reasoning_effort is 'Stores the most recent message effort once per-turn selection is wired.';
comment on column chat_messages.reasoning_effort is 'Stores the selected effort for the turn triggered by this message.';
comment on column chat_queued_messages.reasoning_effort is 'Stores the selected effort until the queued row is promoted.';

create view chats_expanded as
select
	c.id,
	c.owner_id,
	c.workspace_id,
	c.title,
	c.status,
	c.worker_id,
	c.started_at,
	c.heartbeat_at,
	c.created_at,
	c.updated_at,
	c.parent_chat_id,
	c.root_chat_id,
	c.last_model_config_id,
	c.last_reasoning_effort,
	c.archived,
	c.last_error,
	c.mode,
	c.mcp_server_ids,
	c.labels,
	c.build_id,
	c.agent_id,
	c.pin_order,
	c.last_read_message_id,
	c.dynamic_tools,
	c.organization_id,
	c.plan_mode,
	c.client_type,
	c.last_turn_summary,
	c.snapshot_version,
	c.history_version,
	c.queue_version,
	c.generation_attempt,
	c.retry_state,
	c.retry_state_version,
	c.runner_id,
	c.requires_action_deadline_at,
	COALESCE(root.user_acl, c.user_acl) as user_acl,
	COALESCE(root.group_acl, c.group_acl) as group_acl,
	owner.username as owner_username,
	owner.name as owner_name,
	c.context_aggregate_hash,
	c.context_dirty_since,
	c.context_dirty_resources,
	c.context_error
from
	(
		(
			chats c
			left join chats root on (
				(root.id = COALESCE(c.root_chat_id, c.parent_chat_id))
			)
		)
		join visible_users owner on ((owner.id = c.owner_id))
	);

-- Copy legacy per-provider effort values to top-level
-- reasoning_effort. Preserve legacy keys so the down migration can
-- restore the original options shape.
update chat_model_configs
set
	options = options
	|| jsonb_build_object(
		'reasoning_effort',
		jsonb_build_object('default', legacy.effort, 'max', legacy.effort)
	)
from
	(
		select
			id,
			COALESCE(
				NULLIF(
					lower(trim(options #>> '{provider_options,openai,reasoning_effort}')),
					''
				),
				NULLIF(
					lower(trim(options #>> '{provider_options,azure,reasoning_effort}')),
					''
				),
				NULLIF(
					lower(trim(options #>> '{provider_options,anthropic,effort}')),
					''
				),
				NULLIF(
					lower(trim(options #>> '{provider_options,bedrock,effort}')),
					''
				),
				NULLIF(
					lower(
						trim(options #>> '{provider_options,openaicompat,reasoning_effort}')
					),
					''
				),
				NULLIF(
					lower(
						trim(options #>> '{provider_options,openrouter,reasoning,effort}')
					),
					''
				),
				NULLIF(
					lower(trim(options #>> '{provider_options,vercel,reasoning,effort}')),
					''
				)
			) as effort
		from chat_model_configs
	) legacy
where
	chat_model_configs.id = legacy.id
	and legacy.effort is not null
	and legacy.effort in (
		'none',
		'minimal',
		'low',
		'medium',
		'high',
		'xhigh',
		'max'
	);
