crates/formatter/tests/snapshots/snapshots__migrations__000543_chat_status_remove_unused.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Remove legacy chat statuses that the chatd state machine treats as
-- invalid. 'pending', 'paused', and 'completed' are never written by the
-- backend anymore; the valid set is exactly what the state machine
-- recognizes: waiting, running, error, requires_action, interrupting.

-- Remap any historical rows to the closest valid status. The column type
-- is still the original chat_status here.
--
-- 'pending' meant queued work that no runner had picked up yet, so remap
-- it to 'running': the worker acquisition query picks up 'running' chats
-- without a worker and services them.
update chats set status = 'running' where status = 'pending';

-- 'paused' and 'completed' were settled states; 'waiting' is the idle
-- resting state and the column default.
update chats set status = 'waiting' where status in ('paused', 'completed');

-- The partial index's WHERE clause references 'pending', which is being
-- removed. The index is obsolete now that the legacy AcquireChats query
-- is gone.
drop index idx_chats_pending;

-- The view selects c.status, so it must be dropped before the column's
-- type can be altered. It is recreated verbatim below.
drop view chats_expanded;

-- Recreate the enum without the removed values using the
-- rename-create-cast-drop pattern.
alter type chat_status rename to chat_status_old;
create type chat_status as enum (
	'waiting',
	'running',
	'error',
	'requires_action',
	'interrupting'
);
alter table chats alter column status drop default;
alter table chats
	alter column status type chat_status using status::text::chat_status;
alter table chats alter column status set default 'waiting';
drop type chat_status_old;

create view chats_expanded as
select
	c.id,
	c.owner_id,
	c.workspace_id,
	c.title,
	c.status,
	c.worker_id,
	c.started_at,
	c.heartbeat_at,
	c.created_at,
	c.updated_at,
	c.parent_chat_id,
	c.root_chat_id,
	c.last_model_config_id,
	c.last_reasoning_effort,
	c.archived,
	c.last_error,
	c.mode,
	c.mcp_server_ids,
	c.labels,
	c.build_id,
	c.agent_id,
	c.pin_order,
	c.last_read_message_id,
	c.dynamic_tools,
	c.organization_id,
	c.plan_mode,
	c.client_type,
	c.last_turn_summary,
	c.snapshot_version,
	c.history_version,
	c.queue_version,
	c.generation_attempt,
	c.retry_state,
	c.retry_state_version,
	c.runner_id,
	c.requires_action_deadline_at,
	COALESCE(root.user_acl, c.user_acl) as user_acl,
	COALESCE(root.group_acl, c.group_acl) as group_acl,
	owner.username as owner_username,
	owner.name as owner_name,
	c.context_aggregate_hash,
	c.context_dirty_since,
	c.context_dirty_resources,
	c.context_error
from (
	(
		chats c
			left join chats root on (
				(root.id = COALESCE(c.root_chat_id, c.parent_chat_id))
			)
	)
		join visible_users owner on ((owner.id = c.owner_id))
);
