crates/formatter/tests/snapshots/snapshots__migrations__000544_mcp_token_refresh_failure.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table mcp_server_user_tokens drop column oauth_refresh_failure_reason;
